<resources>
    <string name="app_name">Laundry</string>
    <string name="IDPelanggan">Customer ID</string>
    <string name="Hubungi">Contact</string>
    <string name="LIhat">View</string>
    <string name="NamaPelanggan">Customer Name</string>
    <string name="AlamatPelanggan">Customer Address</string>
    <string name="NomorTelepon">Phone Number</string>
    <string name="IDPegawai">Worker ID</string>
    <string name="NamaPegawai">Worker Name</string>
    <string name="AlamatPegawai">Worker Address</string>
    <string name="CabangPegawai">Worker Branch</string>
    <string name="StatusPegawai">Worker Status</string>
    <string name="NamaLengkap">Full Name</string>
    <string name="Alamat">Address</string>
    <string name="Cabang">Branch</string>
    <string name="NomorTeleponPelanggan">Customer Phone Number</string>
    <string name="NomorTeleponPegawai">Worker Phone Number</string>
    <string name="TambahPelanggan">Add Customer</string>
    <string name="TambahPegawai">Add Worker</string>
    <string name="NamaKosong">Please Enter Name</string>
    <string name="AlamatKosong">Please Enter Address</string>
    <string name="CabangKosong">Please Enter Branch</string>
    <string name="NomorTeleponKosong">Please Enter Phone Number</string>
    <string name="IDCabang">Branch ID</string>
    <string name="GagalSimpan">Data Save Failed</string>
    <string name="BerhasilSimpan">Data Saved Successfully</string>
    <string name="Terdaftar">Registered</string>
    <string name="Sunting">Edit</string>
    <string name="Hapus">Delete</string>
    <string name="NamaLayanan">Service Name</string>
    <string name="Harga">Price</string>
    <string name="HargaLayanan">Service Price</string>
    <string name="TambahLayanan">Add Service</string>
    <string name="HargaKosong">Please Enter Price</string>
    <string name="TambahLayananTambahan">Add Additional Services</string>
    <string name="IDLayanan">ID Service</string>
    <string name="Akun">Account</string>
    <string name="Layanan">Service</string>
    <string name="Tambahan">Additional</string>
    <string name="Pegawai">Worker</string>
    <string name="Printer">Printer</string>
    <string name="Pelanggan">Customer</string>
    <string name="Transaksi">Transaction</string>
    <string name="Laporan">Report</string>
    <string name="Estimasi">Estimate</string>
    <string name="Utamakan_Sholat_Kesehatan_dan_Keselamatan_kerja">Prioritize Prayer, Health and Work Safety</string>
    <string name="Siap_Layani_Pelanggan_Setulus_Hati">Ready to Serve Customers Sincerely</string>
    <string name="Selamat_Malam">Good Night</string>
    <string name="Selamat_Pagi">Good Morning</string>
    <string name="Selamat_Siang">Good Afternoon</string>
    <string name="Selamat_Sore">Good Evening</string>
    <string name="NamaCabang">Branch Name</string>
    <string name="TambahCabang">Add Branch</string>


</resources>
