<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardDataPelanggan"
    style="@style/cardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Strip Header ID -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:background="#FF9800"
            android:gravity="center_vertical"
            android:paddingStart="12dp">

            <TextView
                android:id="@+id/tvIdPelanggan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ID: 001"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Isi Konten Pegawai -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <!-- Nama Pegawai -->
            <TextView
                android:id="@+id/tvNamaPelanggan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nama Pegawai"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Alamat: "
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvAlamatPelanggan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AlamatPelanggan"
                    android:textSize="15sp" />
            </LinearLayout>

            <!-- Nomor HP -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No HP: "
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvNoHpPelanggan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NomorTeleponPelanggan"
                    android:textSize="15sp" />
            </LinearLayout>
            <!-- Terdaftar -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cabang: "
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvCabangPelanggan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Cabang"
                    android:textSize="15sp" />
            </LinearLayout>
            <!-- Terdaftar -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Terdaftar: "
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvTerdaftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Terdaftar"
                    android:textSize="15sp" />
            </LinearLayout>


            <!-- Tombol -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnHubungi"
                    style="@style/buttonStyle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Hubungi"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnLihat"
                    style="@style/buttonStyle2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/LIhat"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>